# printer-driver-for-mac

./: .gitignore  AGENTS.md  CMakeLists.txt  plan.md  spec.md
.cursor/rules/: code-review-agent.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: code-review-agent.md  developer-install.md  git-workflow.md
filters/: g3010_filter.c
ppd/: Canon-G3010.ppd
scripts/: review-context.sh
tests/: stub_filter_integration.sh
